# TestSFML

./: CMakeLists.txt  Config.h.in  Head.h  README.md  funct.cpp  main.cpp
